<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context="com.sandertrap.tourguideapp.MainActivity">

    <TextView
        android:id="@+id/restaurants"
        style="@style/CategoryStyle"
        android:background="@color/main_color"
        android:text="@string/restaurants"/>

    <TextView
        android:id="@+id/museums"
        style="@style/CategoryStyle"
        android:background="@color/main_color"
        android:onClick="onClick"
        android:text="@string/museums"/>

    <TextView
        android:id="@+id/historical_sites"
        style="@style/CategoryStyle"
        android:background="@color/main_color"
        android:onClick="onClick"
        android:text="@string/historical_sites"/>

    <TextView
        android:id="@+id/hotels"
        style="@style/CategoryStyle"
        android:background="@color/main_color"
        android:onClick="onClick"
        android:text="@string/hotels"/>

</LinearLayout>
